# dataagent

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md
.planning/phases/01-state-foundation-minimal-graph/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-VERIFICATION.md
.planning/phases/02-sql-tool-hardening/: 02-01-PLAN.md  02-01-SUMMARY.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/phases/03-stats-viz-tools/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-VERIFICATION.md
.planning/phases/04-router-critic-loop/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-VERIFICATION.md
.planning/phases/05-resumability/: 05-01-PLAN.md  05-01-SUMMARY.md  05-CONTEXT.md  05-VERIFICATION.md
.planning/phases/06-eval-api-demo/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-CONTEXT.md  06-VERIFICATION.md
src/dataagent/: __init__.py  __main__.py  api.py  config.py  render.py
tests/: conftest.py  test_api.py  test_cli.py  test_critic_loop.py  test_eval.py  test_graph.py  test_hardening_07_01.py  test_llm_singletons.py  test_loader.py  test_nodes.py  test_queries.py  test_render.py  test_resumability.py  test_router_critic_nodes.py  test_state.py  test_stats.py  test_viz.py
(+24 files in other folders)
